--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,9 @@ blake2-rfc = "0.2.18"
 rustc-hex = "2.0.1"
 ed25519-dalek = "1.0.1"
 bs58 = "0.4.0"
+rand = "0.7.0"
+chrono = { version = "0.4", features = ["serde"] }
+thiserror = "1.0.40"
+iref = { version = "2.2.2", features = ["serde"] }
+static-iref = "2.0.0"
+multibase = "0.9.1"
